--- a/hw-01/Develop/assets/css/style.css
+++ b/hw-01/Develop/assets/css/style.css
@@ -58,16 +58,30 @@ nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
-
 .hero {
-
     width: 100%;
     margin-bottom: 25px;
     background-size: cover;
     background-position: center;
 }
 
+/* main content styling */
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+article > img {
+    max-height: 200px;
+}
 .float-left {
     float: left;
     margin-right: 25px;
@@ -77,13 +91,7 @@ nav ul li {
     float: right;
     margin-left: 25px;
 }
-
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
+/* aside styling */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -105,21 +113,7 @@ section {
     max-width: 150px;
 }
 
-
-article {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-
-article > img {
-    max-height: 200px;
-}
-
-
+/* footer styling */
 .footer {
     padding: 30px;
     clear: both;
